Fix signup form alignment

--- a/source/less/theme.less
+++ b/source/less/theme.less
@@ -303,9 +303,8 @@
             }
             &>input,
             &>select {
-                line-height: 20px;   
-                text-indent: 5px;
-                font-size: 13px;             
+                font-size: 13px;
+                padding: 0 0 3px 0\9;
             }
             &>label {
                 display: none;
